syntax = "proto3"; // Указываем версию синтаксиса

package user; // Пакет (namespace) для UserService

service UserService {
  // Создание нового пользователя
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);

  // Получение пользователя по ID
  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);

  // Обновление данных пользователя
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);

  // Удаление пользователя
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);

  // Получение списка всех пользователей
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

// Сообщение для запроса создания пользователя
message CreateUserRequest {
  string name = 1;       // Имя пользователя
  string email = 2;      // Email пользователя
  string password = 3;   // Пароль
}

// Сообщение для ответа при создании пользователя
message CreateUserResponse {
  string userId = 1;     // ID созданного пользователя
  string status = 2;     // Статус ("success", "error")
}

// Сообщение для запроса пользователя по ID
message GetUserByIdRequest {
  string userId = 1;     // ID пользователя
}

// Сообщение для ответа при получении пользователя
message GetUserByIdResponse {
  User user = 1;         // Объект пользователя
}

// Сообщение для обновления данных пользователя
message UpdateUserRequest {
  string userId = 1;     // ID пользователя
  string name = 2;       // Новое имя пользователя
  string email = 3;      // Новый email пользователя
  string password = 4;   // Новый пароль
}

// Сообщение для ответа при обновлении пользователя
message UpdateUserResponse {
  string status = 1;     // Статус операции
}

// Сообщение для запроса на удаление пользователя
message DeleteUserRequest {
  string userId = 1;     // ID пользователя
}

// Сообщение для ответа при удалении пользователя
message DeleteUserResponse {
  string status = 1;     // Статус операции
}

// Сообщение для запроса списка пользователей
message ListUsersRequest {}

// Сообщение для ответа с данными о пользователях
message ListUsersResponse {
  repeated User users = 1; // Список пользователей
}

// Определение объекта User
message User {
  string id = 1;         // ID пользователя
  string name = 2;       // Имя пользователя
  string email = 3;      // Email пользователя
}
